# goit-python-web-hw13

./: README.md  docker-compose.yaml
first_task/: docker-compose.yaml  main.py  pyproject.toml  requirements.txt
first_task/migrations/: env.py
first_task/migrations/versions/: 10190a1b7fc6_add_email_confirmation.py  1b478e2a1d4b_new_migration.py  26e87d01116e_add_updated_at_for_user.py  972bef9a5f72_init.py  9a308b12f725_update.py  (+1 more)
first_task/src/: schemas.py
second_task/: .env.example  docker-compose.yaml  pyproject.toml  requirements.txt
second_task/quotes_project/quotes_project/: settings.py  urls.py
second_task/quotes_project/quotesapp/: forms.py  models.py  urls.py  views.py
second_task/quotes_project/quotesapp/migrations/: 0001_initial.py
second_task/quotes_project/quotesapp/static/quotesapp/: style.css
second_task/quotes_project/quotesapp/templates/quotesapp/: author_detail.html  author_form.html  base.html  edit_author.html  edit_quote.html  index.html  quote_form.html  quotes_by_tag.html  tag_form.html
second_task/quotes_project/quotesapp/templatetags/: extract_tags.py
second_task/quotes_project/users/: forms.py  models.py  signals.py  urls.py  views.py
second_task/quotes_project/users/migrations/: 0001_initial.py
second_task/quotes_project/users/templates/users/: login.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_email.html  profile.html  signup.html
second_task/quotes_project/utils/: config.ini  migration.py
src/routes/: auth.py
src/services/: auth.py
(+10 files in other folders)
