[tool.poetry]
name = "goit-python-web-hw13-2"
version = "0.1.0"
description = "Django application with quotes from famous people"
authors = ["Alex Khreptak <alex.nuclearboy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
psycopg2-binary = "^2.9.9"
pillow = "^10.3.0"
pymongo = "^4.7.2"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
